chore: member role assignment and other member screen fixes
